--- a/Task6_1.ipynb
+++ b/Task6_1.ipynb
@@ -6,301 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Data Processing Imports\n",
-    "import os\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import osmnx as ox\n",
-    "import folium\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as mcolors  \n",
-    "from shapely.geometry import Polygon\n",
-    "\n",
-    "# Suppress warnings from osmnx\n",
-    "import warnings\n",
-    "warnings.filterwarnings('ignore')\n",
-    "\n",
-    "def load_graph(bounds):\n",
-    "    \"\"\"\n",
-    "    Create the street network within the bounding box.\n",
-    "\n",
-    "    Args:\n",
-    "        bounds (tuple): A tuple containing the bounding box coordinates (x1, x2, y1, y2).\n",
-    "\n",
-    "    Returns:\n",
-    "        networkx.MultiDiGraph: The street network graph.\n",
-    "    \"\"\"\n",
-    "    x1, x2, y1, y2 = bounds\n",
-    "    boundary_polygon = Polygon([(x1, y1), (x2, y1), (x2, y2), (x1, y2)])\n",
-    "    return ox.graph_from_polygon(boundary_polygon, network_type='drive')\n",
-    "\n",
-    "\n",
-    "def load_data(file_path, nrows=None):\n",
-    "    \"\"\"\n",
-    "    Load the trajectory data from a CSV file.\n",
-    "\n",
-    "    Args:\n",
-    "        file_path (str): Path to the CSV file.\n",
-    "        nrows (int, optional): Number of rows to read. Defaults to None (all rows).\n",
-    "\n",
-    "    Returns:\n",
-    "        pd.DataFrame: Loaded DataFrame.\n",
-    "    \"\"\"\n",
-    "    return pd.read_csv(file_path, nrows=nrows)\n",
-    "\n",
-    "\n",
-    "def clean_trajectory_data(df):\n",
-    "    \"\"\"\n",
-    "    Convert trajectory data from string to NumPy arrays.\n",
-    "\n",
-    "    Args:\n",
-    "        df (pd.DataFrame): DataFrame containing trajectory data.\n",
-    "\n",
-    "    Returns:\n",
-    "        np.ndarray: Array with cleaned trajectory data.\n",
-    "    \"\"\"\n",
-    "    train_data = df.to_numpy()\n",
-    "\n",
-    "    for i in range(len(train_data)):\n",
-    "        # Extract the trajectory string from column 8 (0-based index)\n",
-    "        traj_str = train_data[i, 8]\n",
-    "        # Remove leading/trailing characters and split by comma\n",
-    "        data = traj_str[2:-2].replace(']', '').replace('[', '').split(',')\n",
-    "\n",
-    "        if len(data) > 1:\n",
-    "            try:\n",
-    "                data = np.asarray(data, dtype=float).reshape((len(data) // 2, 2))\n",
-    "            except ValueError:\n",
-    "                # Handle cases where data cannot be reshaped properly\n",
-    "                data = np.asarray([[0.0, 0.0]])\n",
-    "        else:\n",
-    "            data = np.asarray([[0.0, 0.0]])\n",
-    "\n",
-    "        train_data[i, 8] = data\n",
-    "\n",
-    "    return train_data\n",
-    "\n",
-    "\n",
-    "def remove_outliers(train_data, threshold_multiplier=5):\n",
-    "    \"\"\"\n",
-    "    Remove outlying GPS coordinates based on a distance threshold.\n",
-    "\n",
-    "    Args:\n",
-    "        train_data (np.ndarray): Array containing trajectory data.\n",
-    "        threshold_multiplier (float, optional): Multiplier for the average distance to determine outliers. Defaults to 5.\n",
-    "\n",
-    "    Returns:\n",
-    "        np.ndarray: Array with outliers removed.\n",
-    "    \"\"\"\n",
-    "    for i in range(len(train_data)):\n",
-    "        GPS_trajectory = train_data[i, 8]\n",
-    "        num_points = len(GPS_trajectory)\n",
-    "\n",
-    "        if num_points > 1:\n",
-    "            route_dist = 0.0\n",
-    "            # Calculate the total route distance\n",
-    "            for j in range(num_points - 1):\n",
-    "                lon_1, lat_1 = GPS_trajectory[j]\n",
-    "                lon_2, lat_2 = GPS_trajectory[j + 1]\n",
-    "                route_dist += np.linalg.norm([lon_1 - lon_2, lat_1 - lat_2])\n",
-    "\n",
-    "            ave_dist = route_dist / (num_points - 1)\n",
-    "            j = 0\n",
-    "\n",
-    "            # Compare points and remove outliers\n",
-    "            while j < (len(GPS_trajectory) - 1):\n",
-    "                lon_1, lat_1 = GPS_trajectory[j]\n",
-    "                lon_2, lat_2 = GPS_trajectory[j + 1]\n",
-    "                dist = np.linalg.norm([lon_1 - lon_2, lat_1 - lat_2])\n",
-    "\n",
-    "                if dist > threshold_multiplier * ave_dist:\n",
-    "                    GPS_trajectory = np.delete(GPS_trajectory, j + 1, 0)\n",
-    "                    if j > 0:\n",
-    "                        j -= 1  # Move back one step to re-evaluate after deletion\n",
-    "                else:\n",
-    "                    j += 1  # Move to the next point\n",
-    "\n",
-    "            train_data[i, 8] = GPS_trajectory\n",
-    "\n",
-    "    return train_data\n",
-    "\n",
-    "\n",
-    "def save_cleaned_data(train_data, original_df, output_path):\n",
-    "    \"\"\"\n",
-    "    Save the cleaned train_data back to a CSV file in the original format.\n",
-    "\n",
-    "    Args:\n",
-    "        train_data (np.ndarray): The cleaned trajectory data.\n",
-    "        original_df (pd.DataFrame): The original DataFrame loaded from the CSV.\n",
-    "        output_path (str): The path where the cleaned CSV will be saved.\n",
-    "    \"\"\"\n",
-    "    # Create a copy of the original DataFrame to maintain all columns\n",
-    "    cleaned_df = original_df.copy()\n",
-    "\n",
-    "    # Convert the NumPy arrays back to string format for column 8\n",
-    "    cleaned_df.iloc[:, 8] = [str(traj.tolist()) for traj in train_data[:, 8]]\n",
-    "\n",
-    "    # Save the cleaned DataFrame to a new CSV file\n",
-    "    cleaned_df.to_csv(output_path, index=False)\n",
-    "    print(f\"Cleaned data saved to {output_path}\")\n",
-    "\n",
-    "\n",
-    "def plot_trajectories_folium(G, train_data, traj_indices, output_path, title='Trajectories'):\n",
-    "    \"\"\"\n",
-    "    Plot the trajectories using Folium.\n",
-    "\n",
-    "    Args:\n",
-    "        G (networkx.MultiDiGraph): The street network graph.\n",
-    "        train_data (np.ndarray): Array containing trajectory data.\n",
-    "        traj_indices (list): List of indices of trajectories to plot.\n",
-    "        output_path (str): Path to save the Folium HTML map.\n",
-    "        title (str, optional): Title of the plot. Defaults to 'Trajectories'.\n",
-    "    \"\"\"\n",
-    "    # Calculate map boundaries\n",
-    "    all_lons = []\n",
-    "    all_lats = []\n",
-    "    for traj_idx in traj_indices:\n",
-    "        traj = train_data[traj_idx, 8]\n",
-    "        if isinstance(traj, np.ndarray) and len(traj) > 0:\n",
-    "            all_lons.extend(traj[:, 0])\n",
-    "            all_lats.extend(traj[:, 1])\n",
-    "\n",
-    "    if not all_lons or not all_lats:\n",
-    "        raise ValueError(\"No valid trajectories to plot.\")\n",
-    "\n",
-    "    x_min, x_max = min(all_lons), max(all_lons)\n",
-    "    y_min, y_max = min(all_lats), max(all_lats)\n",
-    "    map_center = [(y_min + y_max) / 2, (x_min + x_max) / 2]\n",
-    "\n",
-    "    # Initialize Folium map\n",
-    "    folium_map = folium.Map(location=map_center, zoom_start=14, control_scale=True)\n",
-    "\n",
-    "    # Fit map to bounds\n",
-    "    folium_map.fit_bounds([[y_min, x_min], [y_max, x_max]])\n",
-    "\n",
-    "    # Generate a color map with a specific number of colors\n",
-    "    num_traj = len(traj_indices)  # Number of trajectories\n",
-    "    color_map = plt.get_cmap('tab10')(np.linspace(0, 1, num_traj))  # Use np.linspace to sample the colormap\n",
-    "\n",
-    "    # Plot each trajectory using Folium\n",
-    "    for i, traj_idx in enumerate(traj_indices):\n",
-    "        traj = train_data[traj_idx, 8]\n",
-    "        if isinstance(traj, np.ndarray) and len(traj) > 1:\n",
-    "            # Convert to list of [lat, lon] pairs for Folium\n",
-    "            traj_coords = traj[:, [1, 0]].tolist()  # Folium expects [lat, lon]\n",
-    "            folium.PolyLine(\n",
-    "                traj_coords,\n",
-    "                color=mcolors.rgb2hex(color_map[i % len(color_map)]),  # Use mcolors.rgb2hex\n",
-    "                weight=5,\n",
-    "                opacity=0.8,\n",
-    "                tooltip=f'Trip {traj_idx + 1}'\n",
-    "            ).add_to(folium_map)\n",
-    "\n",
-    "            # Add green marker for the start (first point)\n",
-    "            start_point = traj[0]\n",
-    "            folium.Marker(\n",
-    "                location=[start_point[1], start_point[0]],  # [lat, lon]\n",
-    "                icon=folium.Icon(color='green', icon='circle'),\n",
-    "                popup=f\"Start of Trip {traj_idx + 1}\"\n",
-    "            ).add_to(folium_map)\n",
-    "\n",
-    "            # Add red marker for the end (last point)\n",
-    "            end_point = traj[-1]\n",
-    "            folium.Marker(\n",
-    "                location=[end_point[1], end_point[0]],  # [lat, lon]\n",
-    "                icon=folium.Icon(color='red', icon='circle'),\n",
-    "                popup=f\"End of Trip {traj_idx + 1}\"\n",
-    "            ).add_to(folium_map)\n",
-    "\n",
-    "    # Add a legend\n",
-    "    legend_html = '''\n",
-    "     <div style=\"\n",
-    "     position: fixed;\n",
-    "     bottom: 50px; left: 50px; width: 150px; height: auto;\n",
-    "     background-color: white; z-index:9999; font-size:14px;\n",
-    "     border:2px solid grey;\n",
-    "     padding: 10px;\n",
-    "     \">\n",
-    "         <p style=\"margin: 0;\"><b>Legend</b></p>\n",
-    "         <ul style=\"list-style: none; padding-left: 0;\">\n",
-    "    '''\n",
-    "    for i, traj_idx in enumerate(traj_indices):\n",
-    "        color_hex = mcolors.rgb2hex(color_map[i % len(color_map)])  # Corrected hex conversion\n",
-    "        legend_html += f'<li><span style=\"background-color:{color_hex};width:20px;height:5px;display:inline-block;margin-right:5px;\"></span> Trip {traj_idx + 1}</li>'\n",
-    "    legend_html += '</ul></div>'\n",
-    "\n",
-    "    folium_map.get_root().html.add_child(folium.Element(legend_html))\n",
-    "\n",
-    "    # Add Layer Control\n",
-    "    folium.LayerControl().add_to(folium_map)\n",
-    "\n",
-    "    # Save the map to an HTML file\n",
-    "    folium_map.save(output_path)\n",
-    "    print(f\"Interactive Folium map saved to {output_path}\")\n",
-    "\n",
-    "\n",
-    "def main():\n",
-    "    \"\"\"\n",
-    "    Main function to execute the data cleaning and plotting process.\n",
-    "    \"\"\"\n",
-    "    # Define bounding box: (x1, x2, y1, y2)\n",
-    "    bounds = (-8.70, -8.57, 41.13, 41.19)  # Adjust these coordinates as needed\n",
-    "\n",
-    "    # Define file paths\n",
-    "    folder = '/content/data'  # Update this to your folder path\n",
-    "    train_file = os.path.join(folder, \"train-1500.csv\")\n",
-    "    cleaned_train_file = os.path.join(folder, \"train-1500-cleaned.csv\")  # Path for cleaned data\n",
-    "    output_dir = '/content/data/'\n",
-    "    if not os.path.exists(output_dir):\n",
-    "        os.makedirs(output_dir)\n",
-    "\n",
-    "    output_file = os.path.join(output_dir, 'Trajectories_Before_Outlier_Removal_Folium.html')\n",
-    "    outlier_file = os.path.join(output_dir, 'Trajectories_After_Outlier_Removal_Folium.html')\n",
-    "\n",
-    "    # Load graph and data\n",
-    "    G = load_graph(bounds)\n",
-    "    df = load_data(train_file, nrows=1500)  # Load first 1500 rows of the dataset\n",
-    "\n",
-    "    # Clean trajectory data\n",
-    "    train_data = clean_trajectory_data(df)\n",
-    "\n",
-    "    # Select the top 15 trajectories (can be based on any criterion, here just the first 15)\n",
-    "    traj_indices = list(range(15))  # Select first 15 trajectories\n",
-    "\n",
-    "    # Plot initial trips before outlier removal\n",
-    "    plot_trajectories_folium(\n",
-    "        G,\n",
-    "        train_data,\n",
-    "        traj_indices,\n",
-    "        output_file,\n",
-    "        title='Top 15 Trajectories Before Outlier Removal'\n",
-    "    )\n",
-    "\n",
-    "    # Remove outliers\n",
-    "    train_data = remove_outliers(train_data)\n",
-    "\n",
-    "    # Plot trips after removing outliers\n",
-    "    plot_trajectories_folium(\n",
-    "        G,\n",
-    "        train_data,\n",
-    "        traj_indices,\n",
-    "        outlier_file,\n",
-    "        title='Top 15 Trajectories After Outlier Removal'\n",
-    "    )\n",
-    "\n",
-    "    # Save the cleaned data to a new CSV file\n",
-    "    save_cleaned_data(train_data, df, cleaned_train_file)\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Install all the requirements with:\n",
     "! sudo apt-get install libboost-dev libboost-serialization-dev \\\n",
     "gdal-bin libgdal-dev make cmake libbz2-dev libexpat1-dev swig\n",
@@ -585,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +316,7 @@
       "Individual map for Trip 13 saved to data/Task6\\fmap_route_13.html\n",
       "Individual map for Trip 14 saved to data/Task6\\fmap_route_14.html\n",
       "Individual map for Trip 15 saved to data/Task6\\fmap_route_15.html\n",
-      "Combined map saved to data\\Mapped_Trajectories_of_first_15_trips.html\n",
+      "Combined map saved to data\\Mapped_task6.html\n",
       "Visualization completed successfully.\n"
      ]
     }
