--- a/Task6_1.ipynb
+++ b/Task6_1.ipynb
@@ -382,16 +382,13 @@
     "print(\"Nodes {} edges {}\".format(network.get_node_count(), network.get_edge_count()))\n",
     "graph = NetworkGraph(network)\n",
     "\n",
-    "# Precompute an UBODT table\n",
-    "if os.path.isfile(ubodt_file_path):\n",
-    "    ubodt = UBODT.read_ubodt_csv(ubodt_file_path)\n",
-    "    print(\"Read the ubodt file\")\n",
-    "else:\n",
-    "    print(\"Generate and read the ubodt file\")\n",
-    "    ubodt_gen = UBODTGenAlgorithm(network, graph)\n",
-    "    status = ubodt_gen.generate_ubodt(ubodt_file_path, 0.03, binary=False, use_omp=True)\n",
-    "    print(f\"UBODT Generation Status: {status}\")\n",
-    "    ubodt = UBODT.read_ubodt_csv(ubodt_file_path)\n",
+    "# Precompute UBODT table\n",
+    "\n",
+    "print(\"Generate the ubodt file\")\n",
+    "ubodt_gen = UBODTGenAlgorithm(network, graph)\n",
+    "status = ubodt_gen.generate_ubodt(ubodt_file_path, 0.03, binary=False, use_omp=True)\n",
+    "print(f\"UBODT Generation Status: {status}\")\n",
+    "ubodt = UBODT.read_ubodt_csv(ubodt_file_path)\n",
     "\n",
     "# Create FMM model\n",
     "fmm_model = FastMapMatch(network, graph, ubodt)\n",
@@ -407,8 +404,8 @@
     "\n",
     "# Define STMATCH map matching configurations\n",
     "k_stmatch = 8\n",
-    "radius_stmatch = 0.05\n",
-    "gps_error_stmatch = 0.005\n",
+    "radius_stmatch = 0.01\n",
+    "gps_error_stmatch = 0.001\n",
     "vmax = 0.003\n",
     "factor = 1.5\n",
     "stmatch_config = STMATCHConfig(k_stmatch, radius_stmatch, gps_error_stmatch, vmax, factor)\n",
